# b2b

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: prd.MD
src/: config.py
src/ai/: llm_client.py  prompt_engine.py
src/api/: app.py  deps.py
src/api/routers/: clientes.py  copiloto.py  dashboard.py  kanban.py  recomendacoes.py
src/models/: db.py  entities.py  schemas.py
src/repositories/: cliente_repo.py  dashboard_repo.py  recomendacao_repo.py
src/services/: cliente_service.py  copiloto_service.py  dashboard_service.py  kanban_service.py  recomendacao_service.py
tests/: conftest.py  test_clientes.py  test_copiloto.py  test_dashboard.py  test_kanban.py  test_recomendacoes.py
